--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -54,6 +54,12 @@
             </a>
           </li>
 
+          <li>
+            <a data-bs-toggle="collapse" class="nav-link px-0 align-middle" (click)="logout()">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Logout</span>
+            </a>
+          </li>
+
 
 
 
