--- a/project9_cohort4-master/project9_cohort4.client/src/app/app.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-nav-bar *ngIf="check == false || checkLS == 'false' || checkLS === null || checkLS === undefined "></app-nav-bar>
+<app-nav-bar *ngIf="check != true && checkLS != 'true' "></app-nav-bar>
 
 
 <router-outlet></router-outlet>
 
 
-<app-footer *ngIf="check == false || checkLS == 'false' || checkLS === null || checkLS === undefined "></app-footer>
+<app-footer *ngIf="check != true && checkLS != 'true' "></app-footer>
