--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/all-category/all-category.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/all-category/all-category.component.html
@@ -37,7 +37,7 @@
 
 
             <td>
-              <button type="button" class="btn btn-outline-primary" [routerLink]="['/dashboard/UpdateCategory',  item.categoryId]">Edit</button>
+              <button type="button" class="btn btn-outline-primary" [routerLink]="['/dashboard/UpdateCategory', item.categoryId]">Edit</button>  <!-- Bind the edit button to the editAnimal method -->
               &nbsp;
               <button type="button" class="btn btn-outline-danger" (click)="deleteCategory(item.categoryId)">Delete</button><!--   Bind the delete button to the deleteAnimal method-->
             </td>
