admin adoprion requests 70% done

--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -27,6 +27,12 @@
           </li>
 
           <li>
+            <a routerLink="/dashboard/allrequests" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Adoption Requests</span>
+            </a>
+          </li>
+
+          <li>
             <a routerLink="/dashboard/AdminAdoption" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Admin Adoption</span>
             </a>
