about us images

--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/about/about.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/about/about.component.html
@@ -347,10 +347,10 @@
           <div class="team-card radius-pill position-relative shake-animation overflow-hidden">
             <a href="team-details.html" class="team-member-img d-block">
               <div class="shake-thumb">
-                <img src="assets/images/{{ member.image }}" alt="{{ member.name }}'s image'" class="w-100" />
+                <img src="https://localhost:7001/api/Images/getImages/{{ member.image }}" alt="{{ member.name }}'s image'" class="w-100" />
               </div>
               <div class="shake-thumb">
-                <img src="assets/images/{{ member.image }}" alt="{{ member.name }}'s image'" class="w-100" />
+                <img src="https://localhost:7001/api/Images/getImages/{{ member.image }}" alt="{{ member.name }}'s image'" class="w-100" />
               </div>
             </a>
             <div class="team-member-info w-100 d-center py-lg-8 py-6 position-absolute bottom-0 start-0 bg-secondary3 z-1">
