--- a/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/mustafa/all-posts/all-posts.component.html
@@ -18,7 +18,7 @@
             <div class="blog-img scale-animation position-relative radius-20 overflow-hidden mb-lg-7 mb-lg-5 mb-3">
               <img class="w-100" src="https://localhost:7001{{post.storyPhoto}}" alt="blog image">
               <div class="position-absolute end-0 bottom-0 mb-lg-6 mb-4 me-lg-6 me-4">
-                <a href="#" class="btn-primary n0-border text-n0 font-instrument">{{post.storyTitle}}</a>
+                <a routerLink="/postcomments/{{post.postId}}" class="btn-primary n0-border text-n0 font-instrument">{{post.storyTitle}}</a>
               </div>
             </div>
             <div class="blog-content">
