--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-profile/user-profile.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="main-body">
-    <div class="row" *ngIf="userId != ''">
+    <div class="row" *ngIf="userId || userIdLS">
 
       <h2>User Profile</h2>
 
@@ -105,7 +105,7 @@
 
 
 
-    <div class="row">
+    <div class="row" *ngIf="!userId && !userIdLS">
 
       <h1>please login to see your profile</h1>
 
